Debian/etc/iptables-rules
#   This doc is free; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 2, or (at your option)
#   any later version.
#
#   This doc is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program; if not, write to the Free Software Foundation,
#   Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
#
# RELEASE: 20140530
# Autor: Edwin Enrique Flores Bautista
# email: loquitoslack@gmail.com 
# blog: loquitoslack.blogspot.com 
# Fecha: 30-05-12

# Archivo básico de iptables seguridad perimetral, agradecere cualquier mejora y propuesta 

*nat
:PREROUTING ACCEPT [6034:1048646]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -m state --state RELATED,ESTABLISHED -j ACCEPT
-A POSTROUTING -m state --state RELATED,ESTABLISHED -j ACCEPT

############## SNAT 
-A POSTROUTING -s 172.16.7.0/25 -o eth0 -m state --state NEW -j SNAT --to X.X.X.X
-A PREROUTING -s 172.16.7.0/25 -i eth1 -p tcp -m tcp --dport 80 -m state --state NEW -j REDIRECT --to-ports 3128

COMMIT

# Generated by iptables-save v1.4.8 on Mon Mar  7 13:02:39 2011
*filter
:INPUT DROP [4177:418921]
:FORWARD DROP [0:0]
:OUTPUT DROP [2911:486028]
:NO_SSH - [0:0]
:SI_SSH - [0:0]

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m state --state INVALID -j DROP
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# permitimos salida del firewall y localhost
-A OUTPUT -m state --state NEW -j ACCEPT
-A INPUT -i lo -m state --state NEW -j ACCEPT

#### PING
-A INPUT -i eth1 -p icmp -m icmp --icmp-type 8 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p icmp -m icmp --icmp-type 8 -m state --state NEW -j ACCEPT
-A FORWARD -i eth1 -o eth0 -p icmp -m icmp --icmp-type 8 -m state --state NEW -j ACCEPT

#### DNS
-A INPUT -i eth1 -p tcp -m tcp --dport 53 -m state --state NEW -j ACCEPT
-A INPUT -i eth1 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT

#### SQUID
-A INPUT -i eth1 -s 172.16.7.0/25 -p tcp -m tcp --dport 3128 -m state --state NEW -j ACCEPT

######## SSH
-A INPUT -s 172.16.7.0/24 -i eth1 -p tcp -m tcp --dport 715 -m state --state NEW -j SI_SSH

-A SI_SSH -j LOG --log-prefix "USUARIO AUTORIZADO:INPUT "
-A SI_SSH -j ACCEPT
-A NO_SSH -j LOG --log-prefix "USUARIO NO AUTORIZADO:INPUT "
-A NO_SSH -j DROP

######### NTP 
-A FORWARD -s 172.16.7.0/25 -i eth1 -o eth0 -p udp -m udp --dport 123 -m state --state NEW -j ACCEPT

########## HTTPS
-A FORWARD -s 172.16.7.0/24 -i eth1 -o eth0 -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT

########## SAMBA 
-A FORWARD -s 172.16.7.0/25 -i eth1 -o eth0 -p tcp -m tcp --dport 445 -m state --state NEW -j ACCEPT
-A FORWARD -s 172.16.7.0/25 -i eth1 -o eth0 -p tcp -m tcp --dport 139 -m state --state NEW -j ACCEPT

COMMIT
